backend/parser/.antlr/T_swiftParser.java
// Generated from c:\Users\ruben\Desktop\Compi_2\Lab\Proyecto 1\backend\parser\T_swift.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class T_swiftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, WS=63, Block_comment=64, Line_comment=65, 
		Int=66, Float=67, Caracter=68, String=69, Bool=70, Identificador=71;
	public static final int
		RULE_inicio = 0, RULE_instrucciones_globales = 1, RULE_intruccion_global = 2, 
		RULE_function_declaracion = 3, RULE_lista_parametros = 4, RULE_declaracion_parametro = 5, 
		RULE_code_block = 6, RULE_struct_declaracion = 7, RULE_lista_atributos = 8, 
		RULE_instrucciones = 9, RULE_instruccion = 10, RULE_declaracion = 11, 
		RULE_loop_statement = 12, RULE_branch_statement = 13, RULE_control_transfer_statement = 14, 
		RULE_llamadas_funciones = 15, RULE_llamada_normal = 16, RULE_lista_argumentos = 17, 
		RULE_declaracion_argumento = 18, RULE_llamada_metodos = 19, RULE_atributos = 20, 
		RULE_asignar_atributos = 21, RULE_for_in_statement = 22, RULE_rango = 23, 
		RULE_while_statement = 24, RULE_if_statement = 25, RULE_guard_statement = 26, 
		RULE_switch_statement = 27, RULE_switch_case = 28, RULE_default_case = 29, 
		RULE_break_statement = 30, RULE_continue_statement = 31, RULE_return_statement = 32, 
		RULE_constant_declaracion = 33, RULE_variable_declaracion = 34, RULE_anotacion_tipo = 35, 
		RULE_tipos = 36, RULE_array_declaracion = 37, RULE_definicion_vector = 38, 
		RULE_lista_expresiones = 39, RULE_funcion_print = 40, RULE_funcion_append = 41, 
		RULE_funcion_removeLast = 42, RULE_funcion_removeat = 43, RULE_funcion_int = 44, 
		RULE_funcion_float = 45, RULE_funcion_string = 46, RULE_asignacion = 47, 
		RULE_expresion = 48, RULE_l_duble = 49, RULE_primitivos = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "instrucciones_globales", "intruccion_global", "function_declaracion", 
			"lista_parametros", "declaracion_parametro", "code_block", "struct_declaracion", 
			"lista_atributos", "instrucciones", "instruccion", "declaracion", "loop_statement", 
			"branch_statement", "control_transfer_statement", "llamadas_funciones", 
			"llamada_normal", "lista_argumentos", "declaracion_argumento", "llamada_metodos", 
			"atributos", "asignar_atributos", "for_in_statement", "rango", "while_statement", 
			"if_statement", "guard_statement", "switch_statement", "switch_case", 
			"default_case", "break_statement", "continue_statement", "return_statement", 
			"constant_declaracion", "variable_declaracion", "anotacion_tipo", "tipos", 
			"array_declaracion", "definicion_vector", "lista_expresiones", "funcion_print", 
			"funcion_append", "funcion_removeLast", "funcion_removeat", "funcion_int", 
			"funcion_float", "funcion_string", "asignacion", "expresion", "l_duble", 
			"primitivos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'func'", "'('", "')'", "'->'", "','", "':'", "'inout'", 
			"'{'", "'}'", "'struct'", "'let'", "'var'", "'='", "'mutating'", "'&'", 
			"'.'", "'IsEmpty'", "'count'", "'+='", "'-='", "'for'", "'in'", "'...'", 
			"'while'", "'if'", "'else'", "'guard'", "'continue'", "'break'", "'return'", 
			"'switch'", "'case'", "'default'", "'?'", "'String'", "'Int'", "'Float'", 
			"'Bool'", "'Character'", "'['", "']'", "'print'", "'append'", "'removeLast'", 
			"'remove'", "'at'", "'!'", "'-'", "'/'", "'%'", "'*'", "'+'", "'<'", 
			"'<='", "'>='", "'>'", "'=='", "'!='", "'&&'", "'||'", "'nil'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "WS", "Block_comment", "Line_comment", "Int", "Float", 
			"Caracter", "String", "Bool", "Identificador"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "T_swift.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public T_swiftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InicioContext extends ParserRuleContext {
		public Instrucciones_globalesContext instrucciones_globales() {
			return getRuleContext(Instrucciones_globalesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(T_swiftParser.EOF, 0); }
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			instrucciones_globales();
			setState(103);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Instrucciones_globalesContext extends ParserRuleContext {
		public List<Intruccion_globalContext> intruccion_global() {
			return getRuleContexts(Intruccion_globalContext.class);
		}
		public Intruccion_globalContext intruccion_global(int i) {
			return getRuleContext(Intruccion_globalContext.class,i);
		}
		public Instrucciones_globalesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones_globales; }
	}

	public final Instrucciones_globalesContext instrucciones_globales() throws RecognitionException {
		Instrucciones_globalesContext _localctx = new Instrucciones_globalesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrucciones_globales);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__21) | (1L << T__24) | (1L << T__25) | (1L << T__27) | (1L << T__31) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__42))) != 0) || _la==Identificador) {
				{
				{
				setState(105);
				intruccion_global();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Intruccion_globalContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public Loop_statementContext loop_statement() {
			return getRuleContext(Loop_statementContext.class,0);
		}
		public Branch_statementContext branch_statement() {
			return getRuleContext(Branch_statementContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public Llamadas_funcionesContext llamadas_funciones() {
			return getRuleContext(Llamadas_funcionesContext.class,0);
		}
		public Function_declaracionContext function_declaracion() {
			return getRuleContext(Function_declaracionContext.class,0);
		}
		public Struct_declaracionContext struct_declaracion() {
			return getRuleContext(Struct_declaracionContext.class,0);
		}
		public Asignar_atributosContext asignar_atributos() {
			return getRuleContext(Asignar_atributosContext.class,0);
		}
		public Intruccion_globalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intruccion_global; }
	}

	public final Intruccion_globalContext intruccion_global() throws RecognitionException {
		Intruccion_globalContext _localctx = new Intruccion_globalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_intruccion_global);
		int _la;
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				declaracion();
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(112);
					match(T__0);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				loop_statement();
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(116);
					match(T__0);
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				branch_statement();
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(120);
					match(T__0);
					}
				}

				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(123);
				asignacion();
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(124);
					match(T__0);
					}
				}

				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(127);
				llamadas_funciones();
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(128);
					match(T__0);
					}
				}

				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(131);
				function_declaracion();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(132);
				struct_declaracion();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(133);
				asignar_atributos();
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(134);
					match(T__0);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_declaracionContext extends ParserRuleContext {
		public TerminalNode Identificador() { return getToken(T_swiftParser.Identificador, 0); }
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public Lista_parametrosContext lista_parametros() {
			return getRuleContext(Lista_parametrosContext.class,0);
		}
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public Function_declaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declaracion; }
	}

	public final Function_declaracionContext function_declaracion() throws RecognitionException {
		Function_declaracionContext _localctx = new Function_declaracionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_declaracion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__1);
			setState(140);
			match(Identificador);
			setState(141);
			match(T__2);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Identificador) {
				{
				setState(142);
				lista_parametros();
				}
			}

			setState(145);
			match(T__3);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(146);
				match(T__4);
				setState(147);
				tipos();
				}
			}

			setState(150);
			code_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_parametrosContext extends ParserRuleContext {
		public List<Declaracion_parametroContext> declaracion_parametro() {
			return getRuleContexts(Declaracion_parametroContext.class);
		}
		public Declaracion_parametroContext declaracion_parametro(int i) {
			return getRuleContext(Declaracion_parametroContext.class,i);
		}
		public Lista_parametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_parametros; }
	}

	public final Lista_parametrosContext lista_parametros() throws RecognitionException {
		Lista_parametrosContext _localctx = new Lista_parametrosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lista_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			declaracion_parametro();
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(153);
				match(T__5);
				setState(154);
				declaracion_parametro();
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_parametroContext extends ParserRuleContext {
		public Token refencia;
		public List<TerminalNode> Identificador() { return getTokens(T_swiftParser.Identificador); }
		public TerminalNode Identificador(int i) {
			return getToken(T_swiftParser.Identificador, i);
		}
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public Declaracion_parametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_parametro; }
	}

	public final Declaracion_parametroContext declaracion_parametro() throws RecognitionException {
		Declaracion_parametroContext _localctx = new Declaracion_parametroContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracion_parametro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(160);
				match(Identificador);
				}
				break;
			}
			setState(163);
			match(Identificador);
			setState(164);
			match(T__6);
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(165);
				((Declaracion_parametroContext)_localctx).refencia = match(T__7);
				}
			}

			setState(168);
			tipos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Code_blockContext extends ParserRuleContext {
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public Code_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_block; }
	}

	public final Code_blockContext code_block() throws RecognitionException {
		Code_blockContext _localctx = new Code_blockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_code_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(T__8);
			setState(171);
			instrucciones();
			setState(172);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_declaracionContext extends ParserRuleContext {
		public TerminalNode Identificador() { return getToken(T_swiftParser.Identificador, 0); }
		public List<Lista_atributosContext> lista_atributos() {
			return getRuleContexts(Lista_atributosContext.class);
		}
		public Lista_atributosContext lista_atributos(int i) {
			return getRuleContext(Lista_atributosContext.class,i);
		}
		public Struct_declaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_declaracion; }
	}

	public final Struct_declaracionContext struct_declaracion() throws RecognitionException {
		Struct_declaracionContext _localctx = new Struct_declaracionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_struct_declaracion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(T__10);
			setState(175);
			match(Identificador);
			setState(176);
			match(T__8);
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__11) | (1L << T__12) | (1L << T__14))) != 0)) {
				{
				{
				setState(177);
				lista_atributos();
				}
				}
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(183);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_atributosContext extends ParserRuleContext {
		public Lista_atributosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_atributos; }
	 
		public Lista_atributosContext() { }
		public void copyFrom(Lista_atributosContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Declarar_atributoContext extends Lista_atributosContext {
		public Token tipo;
		public TerminalNode Identificador() { return getToken(T_swiftParser.Identificador, 0); }
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public Declarar_atributoContext(Lista_atributosContext ctx) { copyFrom(ctx); }
	}
	public static class Declarar_funcion_scContext extends Lista_atributosContext {
		public Token m;
		public Function_declaracionContext function_declaracion() {
			return getRuleContext(Function_declaracionContext.class,0);
		}
		public Declarar_funcion_scContext(Lista_atributosContext ctx) { copyFrom(ctx); }
	}

	public final Lista_atributosContext lista_atributos() throws RecognitionException {
		Lista_atributosContext _localctx = new Lista_atributosContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_lista_atributos);
		int _la;
		try {
			setState(202);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
			case T__12:
				_localctx = new Declarar_atributoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(185);
				((Declarar_atributoContext)_localctx).tipo = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__11 || _la==T__12) ) {
					((Declarar_atributoContext)_localctx).tipo = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(186);
				match(Identificador);
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__6) {
					{
					setState(187);
					match(T__6);
					setState(188);
					tipos();
					}
				}

				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__13) {
					{
					setState(191);
					match(T__13);
					setState(192);
					expresion(0);
					}
				}

				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(195);
					match(T__0);
					}
				}

				}
				break;
			case T__1:
			case T__14:
				_localctx = new Declarar_funcion_scContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__14) {
					{
					setState(198);
					((Declarar_funcion_scContext)_localctx).m = match(T__14);
					}
				}

				setState(201);
				function_declaracion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_instrucciones);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(204);
					instruccion();
					}
					} 
				}
				setState(209);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
